Update workout backend to display timer values

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,9 +3,12 @@
         <file>main.qml</file>
         <file>WorkoutSummary.qml</file>
         <file>Workout.qml</file>
+        <file>WorkoutMetric.qml</file>
         <file>MainMenu.qml</file>
         <file>Settings.qml</file>
         <file>BottomBar.qml</file>
+        <file>VerticalGridSpacer.qml</file>
+        <file>HorizontalGridSpacer.qml</file>
         <file>images/back.png</file>
         <file>images/next.png</file>
     </qresource>
